# libxtrx

./: CMakeLists.txt  README.md  libxtrx.pc.in  test_xtrx.c  xtrx.c  xtrx_api.h  xtrx_debug.c  xtrx_debug.h  xtrx_fe.c  xtrx_fe.h  xtrx_fe_lms7.c  xtrx_fe_nlms7.c  xtrx_fe_nlms7.h  xtrx_fe_octocal0.c  xtrx_fe_octorx0.c  xtrx_lms7_api.h
cmake/: FindlibLMS7002M.cmake  Findliblms7compact.cmake  Findlibxtrxdsp.cmake  Findlibxtrxll.cmake
examples/xtrx_fft/: CMakeLists.txt  FindLibXTRX.cmake  fftwthread.cpp  fftwthread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rxthread.cpp  rxthread.h  waterfall.cpp  waterfall.h
octo/: adf4355.c  adf4355.h  xtrx_octo_api.h
soapy/: CMakeLists.txt  Registration.cpp  SoapyXTRX.cpp  SoapyXTRX.h  test_xtrx_soapy.c
